# edmbutton

./: .gitattributes  .gitignore  LICENSE.md  MANIFEST.in  README.md  __init__.py  edm_button.py  edm_button_qtplugin.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: publish-to-pypi.yml
edmbutton/: __init__.py  _version.py  edm_button.py  edm_button_qtplugin.py
